--- a/style.css
+++ b/style.css
@@ -1,33 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-
-body{
-    font-family: "Open Sans";
-    padding: 0;
-    margin: 0;
-}
-
-
-.navbar{
-    background-color: #eef2f6;
-    margin: 0;
+footer{
+    background-color: #333;
+    color: white;
     display: flex;
-    padding: 10px;
-    justify-content: space-between;
-}
-#name h1{
-    margin: 0;
-}
-
-.navigation-list {
-    display: flex;
-    text-decoration: none;
-    list-style: none;
-    margin-right: 20px;
-    gap: 20px;
-}
-.navigation-list li {
-    margin:10px;
-    cursor:pointer;
-    
+    justify-content: center;
 }
