--- a/style.css
+++ b/style.css
@@ -1,7 +1,94 @@
+body{
+    --contrast-font-color:rgb(255, 75, 75);
+    color: white;
+    font-family: 'Roboto',sans-serif;
+    background-color: black;
+    scroll-behavior: smooth;
+}
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.logo i{
+    display: none;
+}
+header {
+    font-size: 18px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+header h1{
+    color: var(--contrast-font-color);
+}
 
-footer{
-    background-color: #333;
+nav {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul {
+    display: flex;
+    gap: 30px;
+    margin-right: 30px;
+    list-style: none;
+}
+.mobileNavLinks{
+    display: none;
+}
+.navigation-list {
+    font-weight: 600;
+    position: relative;
+    text-decoration: none;
+    color: var(--contrast-font-color);;
+}
+.navigation-list::before{
+    content: '';
+    border-radius: 3px;
+    position: absolute;
+    bottom: -10px;
+    width: 0%;
+    height: 3px;
+    background-color: var(--contrast-font-color);
+    transition: all 300ms;
+}
+.navigation-list:hover{
+    color: white;
+}
+.navigation-list:hover::before{
+   width: 100%;
+}
+
+footer {
     color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+footer .social-icons{
+    display: flex;
+    gap: 10px;
+}
+.navigation-list.active{
+    color: white;
+}
+.navigation-list.active::before{
+    width: 100%;
+}
+@media (max-width:1080px) {
+    .logo i{
+        display: block;
+    }
+    .navlinks{
+        display: none;
+    }
+    nav{
+        flex-direction: column;
+        
+    }
+    .mobileNavLinks{
+        display: block;
+    }
 }
