--- a/css/projects.css
+++ b/css/projects.css
@@ -54,3 +54,13 @@
 .description,.tech-stack{
     transition: all 300ms;
 }
+
+@media (max-width:1080px) {
+    .tech-stack ul{
+        padding: 0;
+    }
+   .tech-stack-list{
+    display: flex;
+    gap: 4px;
+   }
+}
