--- a/css/projects.css
+++ b/css/projects.css
@@ -44,6 +44,8 @@
     border-radius: 3px;
     background-color: #333;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    max-height: 300px;
+        overflow: auto;
 }
 .description:hover{
     transform: translateY(-10px);
