--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,5 @@
 #projects{
-    padding-left: 20px;
+    padding-left: 10px;
     width: 100%;
 }
 .project{
@@ -24,7 +24,7 @@
 
 .tech-stack{
     flex: 1;
-    padding: 15px;
+    padding: 10px;
     border-radius: 3px;
     background-color: #333;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
@@ -38,6 +38,9 @@
     font-size: 18px;
     border-bottom: 1px solid #444;
 }
+ .tech-stack ul {
+     padding: 0;
+ }
 .description{
     flex: 2;
     padding: 15px;
@@ -58,11 +61,12 @@
 }
 
 @media (max-width:1080px) {
+
     .tech-stack ul{
         padding: 0;
     }
    .tech-stack-list{
     display: flex;
-    gap: 4px;
+    gap: 2px;
    }
 }
