--- a/css/projects.css
+++ b/css/projects.css
@@ -1,72 +1,68 @@
-#projects{
-    padding-left: 10px;
-    width: 100%;
+.project-container{
+    display: flex;
+    gap: 20px;
 }
 .project{
-    margin-bottom: 30px;
-    display: flex;
-    background-color: #2b2b2b;
-    padding: 30px;
-    border-radius: 10px;
-    flex-direction: column;
+    background-color: #333;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    max-width: 400px;
 }
-.project h3{
+.project-name h4{
+    margin: 0;
+    padding: 0;
+    margin-top: 4px;
+}
+.project-name{
+    font-size: 1.3rem;
+    display: flex;
+    justify-content: center;
     color: var(--contrast-font-color);
 }
-.project-details{
+.project-image img{
+    width: 100%;
+    height: 250px;
+    border-radius: 5px;
+}
+.tech-stack ul{
     display: flex;
-    gap: 30px;
-    justify-content: space-between;
-}
-.tech-stack:hover{
-    transform: translateY(-10px);
-}
-
-.tech-stack{
-    flex: 1;
-    padding: 10px;
-    border-radius: 3px;
-    background-color: #333;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-}
-.tech-stack h4{
-    color: var(--contrast-font-color);
-}
-.tech-stack li{
-    list-style: none;
-    padding: 8px;
-    font-size: 18px;
-    border-bottom: 1px solid #444;
-}
- .tech-stack ul {
-     padding: 0;
- }
-.description{
-    flex: 2;
-    padding: 15px;
-    border-radius: 3px;
-    background-color: #333;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-    max-height: 300px;
-        overflow: auto;
-}
-.description:hover{
-    transform: translateY(-10px);
+    margin: 0;
+    padding: 0;
+    li{
+        color: rgb(255, 182, 193);
+        list-style: none;
+        display: flex;
+        gap: 6px;
+        align-items: center;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
 }
 .description p{
-    line-height: 1.6;
+    margin: 0;
+    padding: 0;
 }
-.description,.tech-stack{
+
+.source-code{
+    display: flex;
+    flex-direction: column;
+}
+.source-code{
+    display: block;
+}
+.source-code a{
+    text-decoration: none;
+    color: white;
     transition: all 300ms;
 }
 
+.source-code a:hover{
+    color:rgb(143, 143, 255)
+}
 @media (max-width:1080px) {
-
-    .tech-stack ul{
-        padding: 0;
+    .project-container{
+        display: flex;
+        flex-direction: column;
     }
-   .tech-stack-list{
-    display: flex;
-    gap: 2px;
-   }
 }
