--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,7 @@
 .project-container{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 20px 0 20px;
     gap: 20px;
 }
 .project{
@@ -7,7 +9,7 @@
     padding: 20px;
     border-radius: 5px;
     margin-bottom: 20px;
-    max-width: 400px;
+    max-width: 500px;
 }
 .project-name h4{
     margin: 0;
@@ -66,7 +68,6 @@
         flex-wrap: wrap;
     }
     .project-container{
-        display: flex;
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 }
